--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dates": "^18.1.0",
     "react-dom": "^16.5.2",
