--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.16",
     "classnames": "^2.2.6",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-apollo": "^2.2.4",
     "react-dates": "^18.1.0",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3"
