--- a/ts-client/tsconfig.json
+++ b/ts-client/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
+    "allowJs": true,
     "module": "commonjs",
     "noImplicitAny": true,
     "outDir": "./build/",
@@ -10,5 +11,7 @@
     "sourceMap": true,
     "target": "es5"
   },
-  "include": ["./src/**/**/*"]
+  "include": [
+    "./src/**/**/**/*"
+  ]
 }
