--- a/ts-client/package.json
+++ b/ts-client/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.14",
+    "@types/react-dates": "^17.1.2",
     "@types/react-dom": "^16.0.8",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
