--- a/ts-client/package.json
+++ b/ts-client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/graphql": "^14.0.1",
     "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.14",
     "@types/react-dates": "^17.1.2",
