--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,19 @@
 {
+  "scripts": {
+    "start": "npm run serve",
+    "serve": "node dist/index.js",
+    "watch-node": "nodemon dist/index.js",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
+  },
   "dependencies": {
     "apollo-server-express": "^2.1.0",
     "express": "^4.16.3",
     "graphql": "^14.0.2"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.4"
   }
 }
