refactor (server): migrate to typescript
- all files are typescript without compiler error

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
         "allowJs": true,
         "target": "es6",
         "noImplicitAny": true,
+        "skipLibCheck": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
