--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "apollo-server-express": "^2.1.0",
     "express": "^4.16.3",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.1",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.4"
   }
