--- a/ts-client/package.json
+++ b/ts-client/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dates": "^17.1.2",
     "@types/react-dom": "^16.0.8",
+    "@types/react-redux": "^6.0.9",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
@@ -29,17 +30,20 @@
     "webpack-hot-middleware": "^2.24.2"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "typescript": "^3.1.1",
     "apollo-boost": "^0.1.16",
     "classnames": "^2.2.6",
+    "express": "^4.16.3",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "react": "^16.5.2",
     "react-apollo": "^2.2.4",
-    "react-dates": "^18.1.0"
+    "react-dates": "^18.1.0",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.1.1"
   }
 }
