--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
     "watch-node": "nodemon dist/index.js",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "test": "jest",
+    "watch-jest": "jest --watch"
   },
   "dependencies": {
     "apollo-server-express": "^2.1.0",
@@ -15,7 +17,11 @@
   },
   "devDependencies": {
     "@types/graphql": "^14.0.1",
+    "@types/jest": "^23.3.3",
     "concurrently": "^4.0.1",
-    "nodemon": "^1.18.4"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4",
+    "ts-jest": "^23.10.3",
+    "typescript": "^3.1.1"
   }
 }
